🐞 Fix #116: Beautify scrollbars in Windows Chrome. (Edge is still ugly though 😠)

--- a/components/main/Styles.module.css
+++ b/components/main/Styles.module.css
@@ -15,8 +15,28 @@
 }
 
 .common {
-    overflow: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
     height: 97vh;
+}
+
+.common::-webkit-scrollbar {
+  width: 20px;
+}
+
+.common::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+.common::-webkit-scrollbar-thumb {
+  background-color: #d6dee1;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+.common::-webkit-scrollbar-thumb:hover {
+  background-color: #a8bbbf;
 }
 
 .div1 {
@@ -87,6 +107,26 @@
         margin-top: 10px;
         grid-area: 2 / 1 / 3 / 2;
         width: calc(100vw - 20px);
+        overflow-x: hidden;
+    }
+
+    .main::-webkit-scrollbar {
+      width: 20px;
+    }
+    
+    .main::-webkit-scrollbar-track {
+      background-color: transparent;
+    }
+    
+    .main::-webkit-scrollbar-thumb {
+      background-color: #d6dee1;
+      border-radius: 20px;
+      border: 6px solid transparent;
+      background-clip: content-box;
+    }
+    
+    .main::-webkit-scrollbar-thumb:hover {
+      background-color: #a8bbbf;
     }
 
     .twoSectionsLayout {
